src/main/java/jmind/pigg/parser/generate/Parser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Parser.java */
package jmind.pigg.parser.generate;

import java.io.Reader;
import java.io.StringReader;

import jmind.pigg.parser.ASTAndNode;
import jmind.pigg.parser.ASTBlank;
import jmind.pigg.parser.ASTBlock;
import jmind.pigg.parser.ASTDelete;
import jmind.pigg.parser.ASTEQNode;
import jmind.pigg.parser.ASTElseIfStatement;
import jmind.pigg.parser.ASTElseStatement;
import jmind.pigg.parser.ASTExpression;
import jmind.pigg.parser.ASTExpressionParameter;
import jmind.pigg.parser.ASTFalse;
import jmind.pigg.parser.ASTGENode;
import jmind.pigg.parser.ASTGTNode;
import jmind.pigg.parser.ASTGlobalTable;
import jmind.pigg.parser.ASTIfStatement;
import jmind.pigg.parser.ASTInsert;
import jmind.pigg.parser.ASTIntegerLiteral;
import jmind.pigg.parser.ASTJDBCIterableParameter;
import jmind.pigg.parser.ASTJDBCParameter;
import jmind.pigg.parser.ASTJoinParameter;
import jmind.pigg.parser.ASTLENode;
import jmind.pigg.parser.ASTLTNode;
import jmind.pigg.parser.ASTMerge;
import jmind.pigg.parser.ASTNENode;
import jmind.pigg.parser.ASTNotNode;
import jmind.pigg.parser.ASTNull;
import jmind.pigg.parser.ASTOrNode;
import jmind.pigg.parser.ASTQuoteText;
import jmind.pigg.parser.ASTReplace;
import jmind.pigg.parser.ASTRootNode;
import jmind.pigg.parser.ASTSelect;
import jmind.pigg.parser.ASTStringLiteral;
import jmind.pigg.parser.ASTText;
import jmind.pigg.parser.ASTTrue;
import jmind.pigg.parser.ASTTruncate;
import jmind.pigg.parser.ASTUpdate;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, ParserConstants {/*@bgen(jjtree)*/
  protected JJTParserState jjtree = new JJTParserState();public Parser(String s) {
        this((Reader)(new StringReader(s)));
    }

  final public ASTRootNode parse() throws ParseException {
                                  /*@bgen(jjtree) RootNode */
  ASTRootNode jjtn000 = new ASTRootNode(JJTROOTNODE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      DML();
            ASTBlock jjtn001 = new ASTBlock(JJTBLOCK);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
            jjtn001.jjtSetFirstToken(getToken(1));
      try {
        label_1:
        while (true) {
          Statement();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BLANK:
          case QUOTE_TEXT:
          case JDBC_ITERABLE_PARAMETER:
          case JDBC_PARAMETER:
          case GLOBAL_TABLE:
          case JOIN_PARAMETER:
          case IF_DIRECTIVE:
          case INSERT:
          case DELETE:
          case UPDATE:
          case SELECT:
          case REPLACE:
          case MERGE:
          case TRUNCATE:
          case TEXT:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
        }
      } catch (Throwable jjte001) {
            if (jjtc001) {
              jjtree.clearNodeScope(jjtn001);
              jjtc001 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte001 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte001;}
            }
            if (jjte001 instanceof ParseException) {
              {if (true) throw (ParseException)jjte001;}
            }
            {if (true) throw (Error)jjte001;}
      } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
              jjtn001.jjtSetLastToken(getToken(0));
            }
      }
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public void DML() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INSERT:
      Insert();
      break;
    case DELETE:
      Delete();
      break;
    case UPDATE:
      Update();
      break;
    case SELECT:
      Select();
      break;
    case REPLACE:
      Replace();
      break;
    case MERGE:
      Merge();
      break;
    case TRUNCATE:
      Truncate();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Insert() throws ParseException {
 /*@bgen(jjtree) Insert */
    ASTInsert jjtn000 = new ASTInsert(JJTINSERT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(INSERT);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Delete() throws ParseException {
 /*@bgen(jjtree) Delete */
    ASTDelete jjtn000 = new ASTDelete(JJTDELETE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(DELETE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Update() throws ParseException {
 /*@bgen(jjtree) Update */
    ASTUpdate jjtn000 = new ASTUpdate(JJTUPDATE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(UPDATE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Select() throws ParseException {
 /*@bgen(jjtree) Select */
    ASTSelect jjtn000 = new ASTSelect(JJTSELECT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(SELECT);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Replace() throws ParseException {
 /*@bgen(jjtree) Replace */
    ASTReplace jjtn000 = new ASTReplace(JJTREPLACE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(REPLACE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Merge() throws ParseException {
 /*@bgen(jjtree) Merge */
    ASTMerge jjtn000 = new ASTMerge(JJTMERGE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(MERGE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Truncate() throws ParseException {
 /*@bgen(jjtree) Truncate */
    ASTTruncate jjtn000 = new ASTTruncate(JJTTRUNCATE);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(TRUNCATE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case JDBC_PARAMETER:
      JDBCParameter();
      break;
    case JDBC_ITERABLE_PARAMETER:
      JDBCIterableParameter();
      break;
    case GLOBAL_TABLE:
      GlobalTable();
      break;
    case JOIN_PARAMETER:
      JoinParameter();
      break;
    case IF_DIRECTIVE:
      IfStatement();
      break;
    case QUOTE_TEXT:
      QuoteText();
      break;
    case INSERT:
    case DELETE:
    case UPDATE:
    case SELECT:
    case REPLACE:
    case MERGE:
    case TRUNCATE:
    case TEXT:
      Text();
      break;
    case BLANK:
      Blank();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void JDBCParameter() throws ParseException {
 /*@bgen(jjtree) JDBCParameter */
    ASTJDBCParameter jjtn000 = new ASTJDBCParameter(JJTJDBCPARAMETER);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(JDBC_PARAMETER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.init(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void JDBCIterableParameter() throws ParseException {
 /*@bgen(jjtree) JDBCIterableParameter */
    ASTJDBCIterableParameter jjtn000 = new ASTJDBCIterableParameter(JJTJDBCITERABLEPARAMETER);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(JDBC_ITERABLE_PARAMETER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.init(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void GlobalTable() throws ParseException {
 /*@bgen(jjtree) GlobalTable */
  ASTGlobalTable jjtn000 = new ASTGlobalTable(JJTGLOBALTABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(GLOBAL_TABLE);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void JoinParameter() throws ParseException {
 /*@bgen(jjtree) JoinParameter */
    ASTJoinParameter jjtn000 = new ASTJoinParameter(JJTJOINPARAMETER);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(JOIN_PARAMETER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.init(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void QuoteText() throws ParseException {
 /*@bgen(jjtree) QuoteText */
    ASTQuoteText jjtn000 = new ASTQuoteText(JJTQUOTETEXT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(QUOTE_TEXT);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Text() throws ParseException {
 /*@bgen(jjtree) Text */
    ASTText jjtn000 = new ASTText(JJTTEXT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TEXT:
        t = jj_consume_token(TEXT);
        break;
      case INSERT:
        t = jj_consume_token(INSERT);
        break;
      case DELETE:
        t = jj_consume_token(DELETE);
        break;
      case UPDATE:
        t = jj_consume_token(UPDATE);
        break;
      case SELECT:
        t = jj_consume_token(SELECT);
        break;
      case REPLACE:
        t = jj_consume_token(REPLACE);
        break;
      case MERGE:
        t = jj_consume_token(MERGE);
        break;
      case TRUNCATE:
        t = jj_consume_token(TRUNCATE);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Blank() throws ParseException {
 /*@bgen(jjtree) Blank */
    ASTBlank jjtn000 = new ASTBlank(JJTBLANK);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);
    jjtn000.jjtSetFirstToken(getToken(1));Token t;
    try {
      t = jj_consume_token(BLANK);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      jjtn000.jjtSetLastToken(getToken(0));
        jjtn000.setValue(t.image);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void IfStatement() throws ParseException {
 /*@bgen(jjtree) IfStatement */
  ASTIfStatement jjtn000 = new ASTIfStatement(JJTIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(IF_DIRECTIVE);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
          ASTBlock jjtn001 = new ASTBlock(JJTBLOCK);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
          jjtn001.jjtSetFirstToken(getToken(1));
      try {
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BLANK:
          case QUOTE_TEXT:
          case JDBC_ITERABLE_PARAMETER:
          case JDBC_PARAMETER:
          case GLOBAL_TABLE:
          case JOIN_PARAMETER:
          case IF_DIRECTIVE:
          case INSERT:
          case DELETE:
          case UPDATE:
          case SELECT:
          case REPLACE:
          case MERGE:
          case TRUNCATE:
          case TEXT:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_2;
          }
          Statement();
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
            jjtn001.jjtSetLastToken(getToken(0));
          }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSEIF_DIRECTIVE:
        label_3:
        while (true) {
          ElseIfStatement();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ELSEIF_DIRECTIVE:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE_DIRECTIVE:
        ElseStatement();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void ElseStatement() throws ParseException {
 /*@bgen(jjtree) ElseStatement */
  ASTElseStatement jjtn000 = new ASTElseStatement(JJTELSESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(ELSE_DIRECTIVE);
          ASTBlock jjtn001 = new ASTBlock(JJTBLOCK);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
          jjtn001.jjtSetFirstToken(getToken(1));
      try {
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BLANK:
          case QUOTE_TEXT:
          case JDBC_ITERABLE_PARAMETER:
          case JDBC_PARAMETER:
          case GLOBAL_TABLE:
          case JOIN_PARAMETER:
          case IF_DIRECTIVE:
          case INSERT:
          case DELETE:
          case UPDATE:
          case SELECT:
          case REPLACE:
          case MERGE:
          case TRUNCATE:
          case TEXT:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_4;
          }
          Statement();
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
            jjtn001.jjtSetLastToken(getToken(0));
          }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void ElseIfStatement() throws ParseException {
 /*@bgen(jjtree) ElseIfStatement */
  ASTElseIfStatement jjtn000 = new ASTElseIfStatement(JJTELSEIFSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      jj_consume_token(ELSEIF_DIRECTIVE);
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
          ASTBlock jjtn001 = new ASTBlock(JJTBLOCK);
          boolean jjtc001 = true;
          jjtree.openNodeScope(jjtn001);
          jjtn001.jjtSetFirstToken(getToken(1));
      try {
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case BLANK:
          case QUOTE_TEXT:
          case JDBC_ITERABLE_PARAMETER:
          case JDBC_PARAMETER:
          case GLOBAL_TABLE:
          case JOIN_PARAMETER:
          case IF_DIRECTIVE:
          case INSERT:
          case DELETE:
          case UPDATE:
          case SELECT:
          case REPLACE:
          case MERGE:
          case TRUNCATE:
          case TEXT:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
          Statement();
        }
      } catch (Throwable jjte001) {
          if (jjtc001) {
            jjtree.clearNodeScope(jjtn001);
            jjtc001 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte001 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte001;}
          }
          if (jjte001 instanceof ParseException) {
            {if (true) throw (ParseException)jjte001;}
          }
          {if (true) throw (Error)jjte001;}
      } finally {
          if (jjtc001) {
            jjtree.closeNodeScope(jjtn001, true);
            jjtn001.jjtSetLastToken(getToken(0));
          }
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void Expression() throws ParseException {
 /*@bgen(jjtree) Expression */
  ASTExpression jjtn000 = new ASTExpression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      ConditionalOrExpression();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }
